# videopost_vlc

app/: build.gradle
app/src/androidTest/java/com/ceiv/videopost/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: DefaultDeviceInfo.xml  DefaultStationInfo.xml  DeviceInfoFormat.xml  DevicePositionInfo.xml  appconfig
app/src/main/cpp/: CMakeLists.txt  streamer.cpp
app/src/main/cpp/include/vlc/: libvlc_media_player.h
app/src/main/java/com/ceiv/: ApplicationMonitorService.java  AutoRestartApplication.java  SimpleTimeWheel.java
app/src/main/java/com/ceiv/BrtUtils/: BrtInfoUtils.java  RouteInfo.java  SegmentInfo.java  StationItem.java
app/src/main/java/com/ceiv/BrtUtils/bean/: SearchBasicInfo.java  StationInfo.java  Stations.java
app/src/main/java/com/ceiv/View/: AutoScrollTextView.java  AutoVerticalScrollTextView.java  ScrollTextSurfaceView.java
app/src/main/java/com/ceiv/communication/: DMSCodecFactory.java  DMSDataDecoder.java  DMSDataEncoder.java  FileDownload.java  FileSetDownload.java  FileSetUpload.java  FileUpload.java  HeartBeatThread.java  MD5Util.java  MinaClientHandler.java  MinaClientThread.java  MulticastRecv.java  MulticastThread.java  NetMgrDefine.java  NetMgrMsg.java  NetworkMonitorThread.java  ProtocolMessageProcess.java  SystemInitThread.java
app/src/main/java/com/ceiv/communication/utils/: CopyFileFromAssets.java  DeviceInfo.java  DeviceInfoUtils.java  NetworkProblemUtils.java  ProperTies.java  (+2 more)
app/src/main/java/com/ceiv/log4j/: Log.java  Log4jConfigure.java
app/src/main/java/com/ceiv/streamer/: Streamer.java
app/src/main/java/com/ceiv/videopost/: CodeConstants.java  CrashHandler.java  HttpRequest.java  IPlay.java  MainActivity.java  MainReceiver.java  MarqueeTextView.java  RestartTimesOperation.java  SpUtils.java  StationInfo.java  StationInfoOperation.java  ViceDisplay.java  VideoController.java
app/src/main/res/layout/: activity_main.xml  buttom_fragment.xml  fragment_date.xml  left_fragment.xml  qleft_fragment.xml  qright_fragment.xml  qvisdisplay.xml  right_fragment.xml  top_fragment.xml  visdisplay.xml  zdisplay.xml  zleft_fragment.xml  zright_fragment.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/ceiv/videopost/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+13 files in other folders)
